--- a/package.json
+++ b/package.json
@@ -16,21 +16,28 @@
   },
   "dependencies": {
     "@docusaurus/core": "3.0.0",
-    "@docusaurus/preset-classic": "3.0.0",
     "@docusaurus/plugin-content-blog": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
     "@docusaurus/theme-mermaid": "^3.0.0",
     "@easyops-cn/docusaurus-search-local": "^0.36.0",
+    "@mantine/core": "^7.2.0",
+    "@mantine/hooks": "^7.2.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^1.2.1",
+    "lottie-react": "^2.4.0",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.0",
     "@docusaurus/tsconfig": "^3.0.0",
     "@types/react": "^18.2.29",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.9.1",
+    "postcss-simple-vars": "^7.0.1",
     "typescript": "^5.2.2"
   },
   "browserslist": {
