--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,3 +1,8 @@
+michael:
+  name: Michael O'Rouke
+  title: Grove CEO
+  image_url: /img/favicon.ico
+
 endi:
   name: Endilie Yacop Sucipto
   title: Maintainer of Docusaurus
