--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@docusaurus/theme-mermaid": "^3.0.0",
     "@easyops-cn/docusaurus-search-local": "^0.36.0",
     "@mantine/core": "^7.2.0",
+    "@mantine/form": "^7.2.1",
     "@mantine/hooks": "^7.2.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^1.2.1",
+    "dotenv": "^16.3.1",
     "lottie-react": "^2.4.0",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.2.0",
