--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@docusaurus/core": "3.0.0",
     "@docusaurus/plugin-content-blog": "3.0.0",
     "@docusaurus/preset-classic": "3.0.0",
-    "@docusaurus/theme-mermaid": "^3.0.0",
+    "@docusaurus/theme-mermaid": "3.0.0",
     "@easyops-cn/docusaurus-search-local": "^0.48.4",
     "@mantine/core": "^7.2.0",
     "@mantine/form": "^7.2.1",
